# haskell-bitfinex

./: .gitignore  ChangeLog.md  README.md  flake.nix  haskell-bitfinex.cabal  package.yaml
src/: Bitfinex.hs  Common.hs
src/Authenticated/: CancelOrder.hs  MarginInfo.hs  RetrieveOrders.hs  RetrievePositions.hs  SubmitOrder.hs  Trades.hs  Wallets.hs
src/Public/: Ticker.hs
test/: Spec.hs
