cabal-version: 3.0
name:           haskell-bitfinex
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/stridervc/haskell-bitfinex#readme>
homepage:       https://github.com/stridervc/haskell-bitfinex#readme
bug-reports:    https://github.com/stridervc/haskell-bitfinex/issues
author:         Fred Strauss
maintainer:     fred@strider.co.za
copyright:      2023 Fred Strauss &lt;fred@strider.co.za&gt;
license:        NONE
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

library
  hs-source-dirs: src
  build-depends:  base
  exposed-modules:
      Authenticated.CancelOrder
      Authenticated.MarginInfo
      Authenticated.RetrieveOrders
      Authenticated.RetrievePositions
      Authenticated.SubmitOrder
      Authenticated.Trades
      Authenticated.Wallets
      Bitfinex
      Common
      Public.Ticker
  other-modules:
      Paths_haskell_bitfinex
  build-depends:
      SHA
    , aeson
    , base >=4.7 && <5
    , bytestring
    , http-conduit
    , time
    , utf8-string
  default-language: Haskell2010
